plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '8.1.0'
}

group = 'team.themoment'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

bootJar {
	archiveFileName = 'app.jar'
}

spotless {
	java {
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
		eclipse().configFile("src/main/resources/eclipse-java-formatter.xml")
		leadingTabsToSpaces(4)
		importOrder('java', 'javax', 'org', 'com', '')
		removeUnusedImports()
		endWithNewline()
		trimTrailingWhitespace()
	}
	groovyGradle {
		target '*.gradle'
		greclipse()
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// MySQL Driver
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Test Dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'

	// AWS CloudWatch Logging
	implementation 'ca.pjer:logback-awslogs-appender:1.6.0'

	// AWS S3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:4.0.0-M1'

	// QueryDSL
	implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.1'
	annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.1:jakarta'

	// json
	implementation 'net.minidev:json-smart:2.6.0'

	// Jakarta
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
